[tool.poetry]
name = "projet-3-cryptoy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cryptoy", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
names = "^0.3.0"
cryptography = "^41.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
debugpy = "^1.6.7"
nox = "^2023.4.22"


[tool.poetry.group.linting.dependencies]
flake8 = "^6.0.0"
flake8-absolute-import = "^1.0.0.1"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.6.5"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.13.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
safety = "^2.3.5"
mypy = "^1.4.1"
types-colorama = "^0.4.15.11"
types-simplejson = "^3.19.0.1"


[tool.poetry.group.testing.dependencies]
coverage = {extras = ["toml"], version = "^7.2.7"}
freezegun = "^1.2.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-html = "^3.2.0"
pytest-asyncio = "^0.21.0"
pytest-subtests = "^0.11.0"
pytest-xdist = "^3.3.1"
deepdiff = "^6.3.0"
typeguard = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-config pyproject.toml --cov-report term --cov-report html --cov-report xml --junitxml .local/test_report/test_report.xml --typeguard-packages=cryptoy"
junit_family = "xunit2"
cache_dir = ".local/pytest_cache"
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["cryptoy"]
data_file = ".local/.coverage"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "if 0:", "if False:"]

[tool.coverage.html]
directory = ".local/test_report/coverage_html"

[tool.coverage.xml]
output = ".local/test_report/coverage.xml"

[tool.isort]
# This configuration is compatible with black
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 1 # Force multi-line imports, to reduce merge conflict probability
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
